@@ -1,5 +1,6 @@
 package pl.edu.agh.iosr.controller;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import com.google.common.collect.Lists;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,6 +11,9 @@ import org.springframework.web.bind.annotation.RestController;
 import pl.edu.agh.iosr.cdm.NodesRegistryRepository;
 import pl.edu.agh.iosr.cdm.Node;
 import pl.edu.agh.iosr.cdm.Proposal;
+import pl.edu.agh.iosr.service.LeaderService;
+
+import javax.servlet.http.HttpServletRequest;
 import pl.edu.agh.iosr.cdm.ProposalRepository;
 
 import javax.servlet.http.HttpServletRequest;
@@ -33,14 +37,20 @@ public class ProposerController {
 
     private HashMap<Long, HashMap<Node, Boolean>> quorums = new HashMap<>();
 
+    @Autowired
+    private LeaderService leaderService;
+
     @RequestMapping("/propose")
     public Proposal propose(HttpServletRequest request) {
-        request.getLocalName();
-        quorums.put(new Long(id++), getMinimalQuorum());
-        logger.debug("created proposal with id: " + id);
-        long id = (int) (System.currentTimeMillis() / 1000L) % Lists.newArrayList(nodesRegistryRepository.findAll()).size() + Integer.valueOf(request.getLocalName());
-        return Proposal.builder().id(id).server(request.getLocalName()).build();
-
+        if(leaderService.isLeader(request.getRequestURL().toString())){
+            quorums.put(new Long(id++), getMinimalQuorum());
+            logger.debug("created proposal with id: " + id);
+            long id = (int) (System.currentTimeMillis() / 1000L) % Lists.newArrayList(nodesRegistryRepository.findAll()).size() + Integer.valueOf(request.getLocalName());
+            return Proposal.builder().id(id).server(request.getLocalName()).build();
+        }
+        else{
+            return null;
+        }
     }
 
     @RequestMapping("/accept")
